Correcting mobile navbar z-index

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -74,6 +74,7 @@
         justify-content: center;
         align-items: center;
         gap: 50px;
+        z-index: 1;
     }
 
     .navbarList a {
